# ADS1115-Zephyr-Demo

./: .gitignore  CMakeLists.txt  Makefile  README.md  west.yml
app/: CMakeLists.txt  prj.conf
app/boards/: teensy41.overlay
app/src/: ads1015_defs.h  ads1115_defs.h  ads1x15.h  main.cpp
docs/: last_folder.sh  metadata  notes.md
zephyr/: module.yml
